# educhat

./: .gitignore  README.md  nckh_content.txt  read_nckh.py
educhat/: .env.example  .gitignore  MR_DESCRIPTION.md  README.md  add_user_to_advisor.py  check_api.py  dev-start.sh  dev-stop.sh  docker_error_log.txt  gemini_test_result.txt  generate_schedule_db.py  get_logs.py  ingest_data.py  main.py  models.py  process_pdf.py  requirements.txt  reviser.py  scraper.py  scratch_check_qdrant.py  scratch_pwd.py  scratch_test_phobert.py  searcher.py  update_credits.py  verify_api.py  verify_schema.py
educhat/.playwright-mcp/: page-2026-04-24T01-07-48-653Z.yml
educhat/OCR/: generate_data.py  lens_pipeline.py  ocr_server.py  test.csv  train.csv  train_evaluate_trocr.py
educhat/PhoBert/: emotion_data.csv  prepare_data.py  train_emotion.py
educhat/data/: sgu_schedules.db
educhat/infra/: docker-compose.yml
educhat/libs/common/: pyproject.toml
educhat/libs/common/src/common/: auth.py  limiter.py  logging.py  middleware.py  resilience.py  schemas.py
educhat/scripts/: generate_admin_hash.py  ingest_new_curriculum.py  migrate_users.py  ocr_curriculum.py  seed_password.py  verify_new_data.py
educhat/services/advisor/: advisor.db  advisor_service.py  database.py  main.py
educhat/services/llm/: Dockerfile  README.md  pyproject.toml  requirements.txt
educhat/services/prompt/: Dockerfile  README.md  pyproject.toml
educhat/ui/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
(+60 files in other folders)
